--- a/journal.org
+++ b/journal.org
@@ -1487,7 +1487,7 @@ but it is perhaps easier to understand and use.
 
 ***** DONE Figuring out the right priors
 :LOGBOOK:  
-- State "DONE"       from "STARTED" [2019-05-16 jeu. 09:49]
+- State "DONE"       from "STARTED" [2019-05-16 jeu. 10:46]
 - State "STARTED"    from "TODO"       [2019-05-15 mer. 16:06]
 :END:      
 
@@ -1512,6 +1512,8 @@ generate_dataset=function(intercept, second_degree, first_degree, N, min_x=0, ma
 }
 df=generate_dataset(100,2,6, 500, sigma=150)
 #+end_src
+
+#+RESULTS:
 
 #+begin_src R :results output :session *R* :exports both
 modelString = "data {
@@ -1549,19 +1551,228 @@ model {
 }
 
 generated quantities {
-  vector[N] y_sim;
-  for(i in 1:N) {
-    y_sim[i] = normal_rng(second_degree*(x2[i])+first_degree*x[i]+intercept, sigma);
-  }
+  real x_pos = x[categorical_rng(rep_vector(1,N) / N)];
+  real y_sim;
+  y_sim = normal_rng(second_degree*(x_pos^2)+first_degree*x_pos+intercept, sigma);
 }
 "
 sm = stan_model(model_code = modelString)
 #+end_src
 
+#+RESULTS:
+
 #+begin_src R :results output :session *R* :exports both
 data = list(N=nrow(df),x=df$x,y=df$y,run_estimation=0,it_mean=1,it_sd=10,f_degree_mean=1,s_degree_mean=1,degree_sd=10,sigma_mean=1,sigma_sd=10)
 fit = sampling(sm,data=data, iter=500, chains=8)
 #+end_src
+
+#+RESULTS:
+#+begin_example
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 1).
+Chain 1: 
+Chain 1: Gradient evaluation took 8e-06 seconds
+Chain 1: 1000 transitions using 10 leapfrog steps per transition would take 0.08 seconds.
+Chain 1: Adjust your expectations accordingly!
+Chain 1: 
+Chain 1: 
+Chain 1: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 1: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 1: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 1: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 1: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 1: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 1: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 1: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 1: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 1: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 1: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 1: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 1: 
+Chain 1:  Elapsed Time: 0.01738 seconds (Warm-up)
+Chain 1:                0.005843 seconds (Sampling)
+Chain 1:                0.023223 seconds (Total)
+Chain 1: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 2).
+Chain 2: 
+Chain 2: Gradient evaluation took 4e-06 seconds
+Chain 2: 1000 transitions using 10 leapfrog steps per transition would take 0.04 seconds.
+Chain 2: Adjust your expectations accordingly!
+Chain 2: 
+Chain 2: 
+Chain 2: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 2: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 2: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 2: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 2: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 2: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 2: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 2: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 2: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 2: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 2: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 2: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 2: 
+Chain 2:  Elapsed Time: 0.015096 seconds (Warm-up)
+Chain 2:                0.005844 seconds (Sampling)
+Chain 2:                0.02094 seconds (Total)
+Chain 2: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 3).
+Chain 3: 
+Chain 3: Gradient evaluation took 4e-06 seconds
+Chain 3: 1000 transitions using 10 leapfrog steps per transition would take 0.04 seconds.
+Chain 3: Adjust your expectations accordingly!
+Chain 3: 
+Chain 3: 
+Chain 3: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 3: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 3: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 3: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 3: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 3: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 3: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 3: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 3: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 3: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 3: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 3: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 3: 
+Chain 3:  Elapsed Time: 0.01803 seconds (Warm-up)
+Chain 3:                0.007696 seconds (Sampling)
+Chain 3:                0.025726 seconds (Total)
+Chain 3: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 4).
+Chain 4: 
+Chain 4: Gradient evaluation took 6e-06 seconds
+Chain 4: 1000 transitions using 10 leapfrog steps per transition would take 0.06 seconds.
+Chain 4: Adjust your expectations accordingly!
+Chain 4: 
+Chain 4: 
+Chain 4: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 4: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 4: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 4: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 4: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 4: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 4: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 4: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 4: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 4: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 4: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 4: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 4: 
+Chain 4:  Elapsed Time: 0.017028 seconds (Warm-up)
+Chain 4:                0.005188 seconds (Sampling)
+Chain 4:                0.022216 seconds (Total)
+Chain 4: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 5).
+Chain 5: 
+Chain 5: Gradient evaluation took 4e-06 seconds
+Chain 5: 1000 transitions using 10 leapfrog steps per transition would take 0.04 seconds.
+Chain 5: Adjust your expectations accordingly!
+Chain 5: 
+Chain 5: 
+Chain 5: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 5: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 5: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 5: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 5: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 5: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 5: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 5: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 5: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 5: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 5: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 5: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 5: 
+Chain 5:  Elapsed Time: 0.017953 seconds (Warm-up)
+Chain 5:                0.004923 seconds (Sampling)
+Chain 5:                0.022876 seconds (Total)
+Chain 5: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 6).
+Chain 6: 
+Chain 6: Gradient evaluation took 4e-06 seconds
+Chain 6: 1000 transitions using 10 leapfrog steps per transition would take 0.04 seconds.
+Chain 6: Adjust your expectations accordingly!
+Chain 6: 
+Chain 6: 
+Chain 6: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 6: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 6: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 6: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 6: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 6: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 6: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 6: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 6: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 6: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 6: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 6: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 6: 
+Chain 6:  Elapsed Time: 0.017574 seconds (Warm-up)
+Chain 6:                0.004908 seconds (Sampling)
+Chain 6:                0.022482 seconds (Total)
+Chain 6: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 7).
+Chain 7: 
+Chain 7: Gradient evaluation took 4e-06 seconds
+Chain 7: 1000 transitions using 10 leapfrog steps per transition would take 0.04 seconds.
+Chain 7: Adjust your expectations accordingly!
+Chain 7: 
+Chain 7: 
+Chain 7: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 7: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 7: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 7: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 7: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 7: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 7: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 7: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 7: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 7: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 7: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 7: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 7: 
+Chain 7:  Elapsed Time: 0.017471 seconds (Warm-up)
+Chain 7:                0.004945 seconds (Sampling)
+Chain 7:                0.022416 seconds (Total)
+Chain 7: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 8).
+Chain 8: 
+Chain 8: Gradient evaluation took 4e-06 seconds
+Chain 8: 1000 transitions using 10 leapfrog steps per transition would take 0.04 seconds.
+Chain 8: Adjust your expectations accordingly!
+Chain 8: 
+Chain 8: 
+Chain 8: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 8: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 8: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 8: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 8: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 8: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 8: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 8: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 8: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 8: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 8: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 8: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 8: 
+Chain 8:  Elapsed Time: 0.01777 seconds (Warm-up)
+Chain 8:                0.00615 seconds (Sampling)
+Chain 8:                0.02392 seconds (Total)
+Chain 8: 
+Warning messages:
+1: There were 1 divergent transitions after warmup. Increasing adapt_delta above 0.8 may help. See
+http://mc-stan.org/misc/warnings.html#divergent-transitions-after-warmup 
+2: Examine the pairs() plot to diagnose sampling problems
+#+end_example
 
 #+begin_src R :results output :session *R* :exports both
 print(fit, pars=c("intercept", "first_degree", "second_degree", "sigma"))
@@ -1572,25 +1783,37 @@ mean(y_sim$y_sim)
 
 #+RESULTS:
 #+begin_example
-Inference for Stan model: 991da9db6de658e6de861ff8730595aa.
+Inference for Stan model: ba67be2a2b0f008b97473baf3d15d10d.
 8 chains, each with iter=500; warmup=250; thin=1; 
 post-warmup draws per chain=250, total post-warmup draws=2000.
 
               mean se_mean    sd   2.5%   25%  50%   75% 97.5% n_eff Rhat
-intercept     1.32    0.23  9.83 -18.29 -5.06 1.49  7.86 20.74  1794    1
-first_degree  0.75    0.22  9.60 -18.23 -6.01 1.07  7.28 18.60  1835    1
-second_degree 0.94    0.23 10.13 -19.51 -5.85 1.15  7.85 20.04  2009    1
-sigma         8.28    0.16  5.97   0.42  3.52 7.22 11.87 22.60  1476    1
+intercept     0.75    0.24 10.04 -19.48 -6.00 0.89  7.50 20.32  1738    1
+first_degree  1.21    0.24  9.88 -17.40 -5.76 1.08  7.73 21.74  1757    1
+second_degree 0.99    0.26 10.01 -18.16 -5.82 0.80  7.93 19.88  1485    1
+sigma         8.48    0.16  6.24   0.32  3.52 7.44 12.07 22.49  1462    1
 
-Samples were drawn using NUTS(diag_e) at Thu May 16 09:37:18 2019.
+Samples were drawn using NUTS(diag_e) at Thu May 16 13:50:33 2019.
 For each parameter, n_eff is a crude measure of effective sample size,
 and Rhat is the potential scale reduction factor on split chains (at 
 convergence, Rhat=1).
  
-[1] 7450.331
+[1] 7144.907
 
-[1] 3338.501
+[1] 3530.052
 #+end_example
+
+#+begin_src R :results output graphics :file ./images/generated_data_vague_prior.png :exports both :width 600 :height 400 :session *R* 
+extracted=rstan::extract(fit)
+df_generated = data.frame(x=extracted$x_pos, y=extracted$y_sim, origin='generated')
+df_generated = df_generated[sample(nrow(df_generated), nrow(df)), ]  # there are more points in df_generated, so to have a nicer plot we sample exactly the same number than in df
+df$origin = 'initial'
+tmp = rbind(df, df_generated)
+ggplot(tmp, aes(x=x, y=y, color=origin)) + geom_point(alpha=0.5)
+#+end_src
+
+#+RESULTS:
+[[file:./images/generated_data_vague_prior.png]]
 
 This way we can see more easily the distribution of the previously
 given priors, and how that makes the generated data
@@ -1605,7 +1828,7 @@ mean_0=0 #a vector of means of y values for x=0
 mean_10=0 #a vector of means of y values for x=10
 
 for(x in 1:1000){ #we run 1000 simulations to get a pretty accurate approximation
-  df=generate_dataset(100,2,6, 500, sigma=rnorm(n=1,mean=150,sd=2))
+  df=generate_dataset(100,2,6, 500, sigma=150)
   #for each simulation we get the mean of y values for x=0 and x=10
   mean_0[x]=mean(df$y[which(df$x %in% 0)])
   mean_10[x]=mean(df$y[which(df$x %in% 10)])
@@ -1637,19 +1860,223 @@ mean_first=mean(mean_10,na.rm = T)%%100 %/%10
 
 #+RESULTS:
 :  
-: [1] 0.3397229
+: [1] 0.1241611
 : 
-: [1] 0.02061237
+: [1] 0.03740519
 
 As we can see, the values of the sd are really small, and can be
 replaced by a sd of 1. Now we run our model again but with the
 approximated means of intercept, first-degree and second-degree.
 
 #+begin_src R :results output :session *R* :exports both
-data = list(N=nrow(df),x=df$x,y=df$y,run_estimation=0,it_mean=mean_intercept,it_sd=1,f_degree_mean=mean_first,s_degree_mean=mean_sec,degree_sd=1,sigma_mean=150,sigma_sd=1)
+data = list(N=nrow(df),x=df$x,y=df$y,run_estimation=0,it_mean=mean_intercept,it_sd=1,f_degree_mean=mean_first,s_degree_mean=mean_sec,degree_sd=1,sigma_mean=0,sigma_sd=10)
 
 fit = sampling(sm,data=data, iter=500, chains=8)
 #+end_src
+
+#+RESULTS:
+#+begin_example
+ 
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 1).
+Chain 1: 
+Chain 1: Gradient evaluation took 5e-06 seconds
+Chain 1: 1000 transitions using 10 leapfrog steps per transition would take 0.05 seconds.
+Chain 1: Adjust your expectations accordingly!
+Chain 1: 
+Chain 1: 
+Chain 1: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 1: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 1: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 1: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 1: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 1: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 1: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 1: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 1: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 1: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 1: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 1: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 1: 
+Chain 1:  Elapsed Time: 0.010822 seconds (Warm-up)
+Chain 1:                0.005554 seconds (Sampling)
+Chain 1:                0.016376 seconds (Total)
+Chain 1: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 2).
+Chain 2: 
+Chain 2: Gradient evaluation took 6e-06 seconds
+Chain 2: 1000 transitions using 10 leapfrog steps per transition would take 0.06 seconds.
+Chain 2: Adjust your expectations accordingly!
+Chain 2: 
+Chain 2: 
+Chain 2: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 2: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 2: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 2: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 2: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 2: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 2: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 2: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 2: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 2: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 2: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 2: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 2: 
+Chain 2:  Elapsed Time: 0.009115 seconds (Warm-up)
+Chain 2:                0.007346 seconds (Sampling)
+Chain 2:                0.016461 seconds (Total)
+Chain 2: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 3).
+Chain 3: 
+Chain 3: Gradient evaluation took 6e-06 seconds
+Chain 3: 1000 transitions using 10 leapfrog steps per transition would take 0.06 seconds.
+Chain 3: Adjust your expectations accordingly!
+Chain 3: 
+Chain 3: 
+Chain 3: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 3: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 3: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 3: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 3: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 3: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 3: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 3: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 3: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 3: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 3: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 3: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 3: 
+Chain 3:  Elapsed Time: 0.009098 seconds (Warm-up)
+Chain 3:                0.007334 seconds (Sampling)
+Chain 3:                0.016432 seconds (Total)
+Chain 3: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 4).
+Chain 4: 
+Chain 4: Gradient evaluation took 5e-06 seconds
+Chain 4: 1000 transitions using 10 leapfrog steps per transition would take 0.05 seconds.
+Chain 4: Adjust your expectations accordingly!
+Chain 4: 
+Chain 4: 
+Chain 4: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 4: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 4: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 4: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 4: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 4: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 4: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 4: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 4: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 4: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 4: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 4: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 4: 
+Chain 4:  Elapsed Time: 0.012249 seconds (Warm-up)
+Chain 4:                0.00712 seconds (Sampling)
+Chain 4:                0.019369 seconds (Total)
+Chain 4: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 5).
+Chain 5: 
+Chain 5: Gradient evaluation took 4e-06 seconds
+Chain 5: 1000 transitions using 10 leapfrog steps per transition would take 0.04 seconds.
+Chain 5: Adjust your expectations accordingly!
+Chain 5: 
+Chain 5: 
+Chain 5: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 5: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 5: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 5: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 5: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 5: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 5: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 5: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 5: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 5: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 5: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 5: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 5: 
+Chain 5:  Elapsed Time: 0.006398 seconds (Warm-up)
+Chain 5:                0.004923 seconds (Sampling)
+Chain 5:                0.011321 seconds (Total)
+Chain 5: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 6).
+Chain 6: 
+Chain 6: Gradient evaluation took 4e-06 seconds
+Chain 6: 1000 transitions using 10 leapfrog steps per transition would take 0.04 seconds.
+Chain 6: Adjust your expectations accordingly!
+Chain 6: 
+Chain 6: 
+Chain 6: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 6: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 6: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 6: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 6: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 6: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 6: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 6: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 6: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 6: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 6: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 6: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 6: 
+Chain 6:  Elapsed Time: 0.00574 seconds (Warm-up)
+Chain 6:                0.007349 seconds (Sampling)
+Chain 6:                0.013089 seconds (Total)
+Chain 6: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 7).
+Chain 7: 
+Chain 7: Gradient evaluation took 5e-06 seconds
+Chain 7: 1000 transitions using 10 leapfrog steps per transition would take 0.05 seconds.
+Chain 7: Adjust your expectations accordingly!
+Chain 7: 
+Chain 7: 
+Chain 7: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 7: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 7: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 7: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 7: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 7: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 7: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 7: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 7: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 7: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 7: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 7: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 7: 
+Chain 7:  Elapsed Time: 0.009162 seconds (Warm-up)
+Chain 7:                0.008283 seconds (Sampling)
+Chain 7:                0.017445 seconds (Total)
+Chain 7: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 8).
+Chain 8: 
+Chain 8: Gradient evaluation took 5e-06 seconds
+Chain 8: 1000 transitions using 10 leapfrog steps per transition would take 0.05 seconds.
+Chain 8: Adjust your expectations accordingly!
+Chain 8: 
+Chain 8: 
+Chain 8: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 8: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 8: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 8: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 8: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 8: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 8: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 8: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 8: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 8: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 8: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 8: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 8: 
+Chain 8:  Elapsed Time: 0.008495 seconds (Warm-up)
+Chain 8:                0.009114 seconds (Sampling)
+Chain 8:                0.017609 seconds (Total)
+Chain 8:
+#+end_example
 
 #+begin_src R :results output :session *R* :exports both
 y_sim = extract(fit, pars = "y_sim")
@@ -1662,21 +2089,21 @@ stan_trace(fit,pars=c("intercept","first_degree","second_degree","sigma"))
 #+RESULTS:
 #+begin_example
 
-[1] 6798.004
+[1] 6668.037
 
-[1] 6653.227
+[1] 6612.556
 
-Inference for Stan model: 991da9db6de658e6de861ff8730595aa.
+Inference for Stan model: ba67be2a2b0f008b97473baf3d15d10d.
 8 chains, each with iter=500; warmup=250; thin=1; 
 post-warmup draws per chain=250, total post-warmup draws=2000.
 
                 mean se_mean   sd   2.5%    25%    50%    75%  97.5% n_eff Rhat
-intercept      99.01    0.02 0.99  97.06  98.35  98.99  99.66 100.98  2391 1.00
-first_degree    6.05    0.03 0.97   4.19   5.38   6.03   6.70   8.02  1297 1.00
-second_degree   1.95    0.04 1.01   0.02   1.28   1.96   2.62   3.93   743 1.01
-sigma         149.97    0.03 1.02 147.96 149.29 149.92 150.69 151.96  1505 1.00
+intercept     102.01    0.03 1.00 100.09 101.33 101.98 102.64 104.04  1604    1
+first_degree    5.99    0.02 0.99   4.16   5.27   5.97   6.70   7.89  1572    1
+second_degree   2.00    0.03 1.01   0.00   1.32   2.03   2.70   3.88  1272    1
+sigma           7.95    0.19 6.17   0.25   3.06   6.69  11.60  23.05  1108    1
 
-Samples were drawn using NUTS(diag_e) at Thu May 16 09:38:48 2019.
+Samples were drawn using NUTS(diag_e) at Thu May 16 13:51:42 2019.
 For each parameter, n_eff is a crude measure of effective sample size,
 and Rhat is the potential scale reduction factor on split chains (at 
 convergence, Rhat=1).
@@ -1692,6 +2119,214 @@ data = list(N=nrow(df),x=df$x,y=df$y,run_estimation=1,it_mean=mean_intercept,it_
 fit = sampling(sm,data=data, iter=500, chains=8)
 #+end_src
 
+#+RESULTS:
+#+begin_example
+ 
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 1).
+Chain 1: 
+Chain 1: Gradient evaluation took 0.00013 seconds
+Chain 1: 1000 transitions using 10 leapfrog steps per transition would take 1.3 seconds.
+Chain 1: Adjust your expectations accordingly!
+Chain 1: 
+Chain 1: 
+Chain 1: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 1: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 1: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 1: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 1: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 1: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 1: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 1: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 1: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 1: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 1: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 1: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 1: 
+Chain 1:  Elapsed Time: 0.65015 seconds (Warm-up)
+Chain 1:                0.240311 seconds (Sampling)
+Chain 1:                0.890461 seconds (Total)
+Chain 1: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 2).
+Chain 2: 
+Chain 2: Gradient evaluation took 6.5e-05 seconds
+Chain 2: 1000 transitions using 10 leapfrog steps per transition would take 0.65 seconds.
+Chain 2: Adjust your expectations accordingly!
+Chain 2: 
+Chain 2: 
+Chain 2: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 2: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 2: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 2: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 2: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 2: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 2: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 2: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 2: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 2: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 2: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 2: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 2: 
+Chain 2:  Elapsed Time: 0.730258 seconds (Warm-up)
+Chain 2:                1.27852 seconds (Sampling)
+Chain 2:                2.00877 seconds (Total)
+Chain 2: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 3).
+Chain 3: 
+Chain 3: Gradient evaluation took 8.7e-05 seconds
+Chain 3: 1000 transitions using 10 leapfrog steps per transition would take 0.87 seconds.
+Chain 3: Adjust your expectations accordingly!
+Chain 3: 
+Chain 3: 
+Chain 3: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 3: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 3: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 3: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 3: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 3: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 3: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 3: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 3: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 3: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 3: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 3: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 3: 
+Chain 3:  Elapsed Time: 0.392354 seconds (Warm-up)
+Chain 3:                0.529003 seconds (Sampling)
+Chain 3:                0.921357 seconds (Total)
+Chain 3: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 4).
+Chain 4: 
+Chain 4: Gradient evaluation took 8.3e-05 seconds
+Chain 4: 1000 transitions using 10 leapfrog steps per transition would take 0.83 seconds.
+Chain 4: Adjust your expectations accordingly!
+Chain 4: 
+Chain 4: 
+Chain 4: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 4: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 4: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 4: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 4: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 4: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 4: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 4: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 4: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 4: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 4: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 4: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 4: 
+Chain 4:  Elapsed Time: 0.409167 seconds (Warm-up)
+Chain 4:                0.626242 seconds (Sampling)
+Chain 4:                1.03541 seconds (Total)
+Chain 4: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 5).
+Chain 5: 
+Chain 5: Gradient evaluation took 6.4e-05 seconds
+Chain 5: 1000 transitions using 10 leapfrog steps per transition would take 0.64 seconds.
+Chain 5: Adjust your expectations accordingly!
+Chain 5: 
+Chain 5: 
+Chain 5: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 5: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 5: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 5: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 5: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 5: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 5: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 5: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 5: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 5: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 5: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 5: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 5: 
+Chain 5:  Elapsed Time: 0.427934 seconds (Warm-up)
+Chain 5:                0.283541 seconds (Sampling)
+Chain 5:                0.711475 seconds (Total)
+Chain 5: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 6).
+Chain 6: 
+Chain 6: Gradient evaluation took 8.5e-05 seconds
+Chain 6: 1000 transitions using 10 leapfrog steps per transition would take 0.85 seconds.
+Chain 6: Adjust your expectations accordingly!
+Chain 6: 
+Chain 6: 
+Chain 6: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 6: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 6: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 6: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 6: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 6: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 6: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 6: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 6: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 6: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 6: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 6: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 6: 
+Chain 6:  Elapsed Time: 0.870979 seconds (Warm-up)
+Chain 6:                0.562292 seconds (Sampling)
+Chain 6:                1.43327 seconds (Total)
+Chain 6: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 7).
+Chain 7: 
+Chain 7: Gradient evaluation took 6.4e-05 seconds
+Chain 7: 1000 transitions using 10 leapfrog steps per transition would take 0.64 seconds.
+Chain 7: Adjust your expectations accordingly!
+Chain 7: 
+Chain 7: 
+Chain 7: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 7: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 7: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 7: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 7: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 7: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 7: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 7: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 7: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 7: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 7: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 7: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 7: 
+Chain 7:  Elapsed Time: 1.0137 seconds (Warm-up)
+Chain 7:                0.291937 seconds (Sampling)
+Chain 7:                1.30564 seconds (Total)
+Chain 7: 
+
+SAMPLING FOR MODEL 'ba67be2a2b0f008b97473baf3d15d10d' NOW (CHAIN 8).
+Chain 8: 
+Chain 8: Gradient evaluation took 6.5e-05 seconds
+Chain 8: 1000 transitions using 10 leapfrog steps per transition would take 0.65 seconds.
+Chain 8: Adjust your expectations accordingly!
+Chain 8: 
+Chain 8: 
+Chain 8: Iteration:   1 / 500 [  0%]  (Warmup)
+Chain 8: Iteration:  50 / 500 [ 10%]  (Warmup)
+Chain 8: Iteration: 100 / 500 [ 20%]  (Warmup)
+Chain 8: Iteration: 150 / 500 [ 30%]  (Warmup)
+Chain 8: Iteration: 200 / 500 [ 40%]  (Warmup)
+Chain 8: Iteration: 250 / 500 [ 50%]  (Warmup)
+Chain 8: Iteration: 251 / 500 [ 50%]  (Sampling)
+Chain 8: Iteration: 300 / 500 [ 60%]  (Sampling)
+Chain 8: Iteration: 350 / 500 [ 70%]  (Sampling)
+Chain 8: Iteration: 400 / 500 [ 80%]  (Sampling)
+Chain 8: Iteration: 450 / 500 [ 90%]  (Sampling)
+Chain 8: Iteration: 500 / 500 [100%]  (Sampling)
+Chain 8: 
+Chain 8:  Elapsed Time: 0.638479 seconds (Warm-up)
+Chain 8:                0.317678 seconds (Sampling)
+Chain 8:                0.956157 seconds (Total)
+Chain 8: 
+Warning messages:
+1: There were 1 chains where the estimated Bayesian Fraction of Missing Information was low. See
+http://mc-stan.org/misc/warnings.html#bfmi-low 
+2: Examine the pairs() plot to diagnose sampling problems
+#+end_example
+
 #+begin_src R :results output :session *R* :exports both
 y_sim = extract(fit, pars = "y_sim")
 mean(df$y)
@@ -1702,21 +2337,21 @@ print(fit,pars=c("intercept","first_degree","second_degree","sigma"))
 #+RESULTS:
 #+begin_example
 
-[1] 6798.004
+[1] 6668.037
 
-[1] 6797.554
+[1] 6640.834
 
-Inference for Stan model: 991da9db6de658e6de861ff8730595aa.
+Inference for Stan model: ba67be2a2b0f008b97473baf3d15d10d.
 8 chains, each with iter=500; warmup=250; thin=1; 
 post-warmup draws per chain=250, total post-warmup draws=2000.
 
                 mean se_mean   sd   2.5%    25%    50%    75%  97.5% n_eff Rhat
-intercept      99.05    0.03 1.01  97.10  98.38  99.01  99.74 101.12  1346 1.00
-first_degree    6.06    0.02 0.42   5.24   5.79   6.05   6.33   6.88   738 1.01
-second_degree   2.00    0.00 0.01   1.99   2.00   2.00   2.00   2.01   715 1.01
-sigma         150.09    0.03 0.97 148.24 149.44 150.06 150.76 152.06  1148 1.00
+intercept     100.97    1.30 7.10  97.79 101.36 102.02 102.66 103.96    30 1.25
+first_degree    5.43    0.02 0.43   4.57   5.12   5.43   5.73   6.32   534 1.00
+second_degree   2.00    0.00 0.01   1.99   2.00   2.00   2.01   2.01   550 1.00
+sigma         150.28    0.03 0.96 148.35 149.64 150.31 150.93 152.12  1197 1.00
 
-Samples were drawn using NUTS(diag_e) at Thu May 16 09:43:19 2019.
+Samples were drawn using NUTS(diag_e) at Thu May 16 13:52:14 2019.
 For each parameter, n_eff is a crude measure of effective sample size,
 and Rhat is the potential scale reduction factor on split chains (at 
 convergence, Rhat=1).
@@ -1724,3 +2359,50 @@ convergence, Rhat=1).
 
 And now with the data taken in account, the found parameters are much
 more accurate than before, and this shows in the generated data y-sim.
+
+#+begin_src R :results output graphics :file ./images/generated_data_precise_prior.png :exports both :width 600 :height 400 :session *R* 
+extracted=rstan::extract(fit)
+df_generated = data.frame(x=extracted$x_pos, y=extracted$y_sim, origin='generated')
+df_generated = df_generated[sample(nrow(df_generated), nrow(df)), ]  # there are more points in df_generated, so to have a nicer plot we sample exactly the same number than in df
+df$origin = 'initial'
+tmp = rbind(df, df_generated)
+ggplot(tmp, aes(x=x, y=y, color=origin)) + geom_point(alpha=0.5)
+#+end_src
+
+#+RESULTS:
+[[file:./images/generated_data_precise_prior.png]]
+
+*** 2019-05-16 thursday
+**** Attended the seminar about how to use Big Data Solutions to Improve HPC systems by Thomas Ropars :SEMINAR:
+***** Introduction
+Supercomputers are producing large amount of data that need to be
+analyzed. They produce mostly two kinds of data: scientific data and
+monitoring data. Scientific data are the results of the execution of
+numerical simulations and need to be analyzed to extract knowledge. 
+Monitoring data are produced by all kinds of sensors and software
+components, and can be analyzed to detect, among other things,
+reliability and performance issues. Considering the scale of such
+systems, the amount of data to process is huge and analyzing these
+data with short response time is often necessary. Using techniques and
+algorithms coming from the Big Data community seems appealing in this
+context.
+
+***** Notes
+- This talk presented how to apply Big Data and Machine Learning
+  techniques in a High Performance Computing context using Apache
+  Spark Streaming as a tool for in-situ data analysis. Apache Spark
+  Streaming is a scalable fault-tolerant streaming processing
+  system, that allows real-time processing of data, which means that
+  the data can come in a continuous flow. Data will be accumulated
+  during a certain duration (every N period of time), and Spark
+  Streaming will produce a Resilient Distributed Dataset from these
+  accumulated data.
+
+- CPU overheating issues can cause damage to hardware so it's
+  important to prevent them as much as possible. To do so, the idea
+  would be to predict them in advance, so to reduce the frequency of
+  use of the CPU precisely one minute before the upcoming overheat. In
+  many cases, this would prevent overheating, and for false positive
+  cases (cases where the CPU was not going to overheat), it's not an
+  important loss in performance so it's worth reducing the frequency
+  just in case.
